<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/layout_adicion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="48dp">




        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_vendor_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:passwordToggleEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_a"
                style="@style/Widget.TdP.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:hint="a"
                android:lines="1"
                android:maxLength="25"
                android:drawablePadding="16dp"
                android:nextFocusDown="@+id/id_b" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:passwordToggleEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_b"
                style="@style/Widget.TdP.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:hint="b"
                android:lines="1"
                android:drawablePadding="16dp"
                android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/idsumar"
            style="@style/Widget.TdP.Button.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:text="sumar" />



        <TextView
            android:id="@+id/id_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"

            android:gravity="center_horizontal|center_vertical"
            android:padding="8dp"
            android:text=""
            android:textColor="@color/colorPrimary" />



    </LinearLayout>
</ScrollView>
    <Button
        android:id="@+id/btn_next"
        style="@style/Widget.TdP.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Siguiente" />


</FrameLayout>