...
                android:id="@+id/idsumar"
                style="@style/Widget.TdP.Button.Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:text="Restar" />



            <TextView
                android:id="@+id/id_c"
                android:layout_width="wrap_content"
...
